commit al master del blogpost de su vercion mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-		<h1>aqui vamos a hacer un blog post</h1>
-		<p>Y este es el parrafo de inicio</p>
+	<div class="container">
+		<h1>Ramificacion de git</h1>
+		
+		<p>Y este es el parrafo de inicio donde iniciaremos en la prueba al mundo de git y ramificaciones remotas etc.</p>
+	</div>
 </body>
 </html>>
