Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,15 @@
 </head>
 <body>
 	<div class="container">
+		<div id="cabecera">
+			Cabecera
+		</div>
+		
+		<div id="post">
 		<h1>Ramificacion de git</h1>
 		
 		<p>Y este es el parrafo de inicio donde iniciaremos en la prueba al mundo de git y ramificaciones remotas etc.</p>
+		</div>
 	</div>
 </body>
 </html>>
