--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 		<h1>Ramificacion de git</h1>
 		
 		<p>Y este es el parrafo de inicio donde iniciaremos en la prueba al mundo de git y ramificaciones remotas etc.</p>
+		<p>
+			los blosg son la mejor forma de compartir informacion.
+		</p>
 	</div>
 </body>
 </html>>
