modifique la cabecera y color de texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
 	<div class="container">
 		<div id="cabecera">
 			Cabecera (Blog post)
+			<span id="tagline">tu blog de cabecera
+			</span>
 		</div>
 		
 		<div id="post">
@@ -23,4 +25,4 @@
 
 	</div>
 </body>
-</html>>
+</html>
