agrege suscribcion y cambie colo texto azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 	<div class="container">
 		<div id="cabecera">
 			Cabecera (Blog post)
+			<span id="tagline">Tu blog master</span>
 		</div>
 		
 		<div id="post">
@@ -18,9 +19,9 @@
 		<p>
 			los blosg son la mejor forma de compartir informacion.
 		</p>
+		<p>Suscribete y dale Like</p>
 
 		</div>
-
 	</div>
 </body>
 </html>>
